--- a/frontend/src/app/board/board.component.scss
+++ b/frontend/src/app/board/board.component.scss
@@ -23,5 +23,9 @@
 }
 
 .dropItem{
-  min-height: 200px!important;
+  min-height: 500px!important;
+}
+
+.addRight{
+  border-right: 1px solid #7f7f7f;
 }
