--- a/frontend/src/app/dic-control/dic-control.component.html
+++ b/frontend/src/app/dic-control/dic-control.component.html
@@ -31,9 +31,10 @@
 
         <div class="col-sm-10">
           <div style="border: solid 1px black; padding: 5px">
-            <a><i style="color: blue" class="fa fa-edit fa-2x"></i></a>
-            <a style="margin-left: 10px"><i style="color:green" class="fa fa-plus-circle fa-2x"></i></a>
-            <a style="margin-left: 10px"><i style="color:red" class="fa fa-times-circle fa-2x"></i></a>
+            <a (click)="openModal(template);editDic()"><i style="color: blue" class="fa fa-edit fa-2x"></i></a>
+            <a style="margin-left: 10px" (click)="openModal(template);addDic()"><i style="color:green"
+                                                                                   class="fa fa-plus-circle fa-2x"></i></a>
+            <a (click)="openModal(template2);deleteDic()" style="margin-left: 10px"><i style="color:red" class="fa fa-times-circle fa-2x"></i></a>
           </div>
 
           <div style="border: solid 1px black; padding: 5px;
@@ -67,7 +68,8 @@
               </tr>
               </thead>
               <tbody style="cursor: pointer">
-              <tr *ngFor="let dic of residentialComplexes;let i = index">
+              <tr *ngFor="let dic of residentialComplexes;let i = index" (click)="clickTr(dic)"
+                  [ngClass]="{'rowBlue': (dic==clickColumnDic)}">
                 <td>{{dic.code}}</td>
                 <td>
                   <ng-select
@@ -181,6 +183,8 @@
               </tbody>
             </table>
 
+
+            <!--{{clickColumnDic.nameEn}}-->
             <table *ngIf="!resident" class="table table-bordered text-center table-sm">
               <thead class="text-center">
               <tr>
@@ -191,7 +195,9 @@
               </tr>
               </thead>
               <tbody style="cursor: pointer">
-              <tr *ngFor="let dic of dictionary;let i = index">
+              <tr *ngFor="let dic of dictionary;let i = index" (click)="clickTr(dic)"
+                  [ngClass]="{'rowBlue': (dic==clickColumnDic)}"
+              >
                 <td>{{dic.code}}</td>
                 <td>{{dic.nameEn}}</td>
                 <td>{{dic.nameKz}}</td>
@@ -204,6 +210,210 @@
 
 
       </div>
+
+      <ng-template #template2>
+        <div class="modal-header">
+          <h4 class="modal-title pull-left">Подтверждение действия</h4>
+          <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide();clearForm();">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body" style="text-align: center">
+          <div class="col-sm" style="text-align: center">
+            <h4 class="modal-title pull-left">Действительно удалить запись реестра?</h4>
+          </div>
+
+          <div class="col-sm" style="text-align: right">
+            <button type="button" class="btn btn-primary" (click)="deleteById()" style="margin: 10px">
+              Подтвердить
+            </button>
+            <button type="button" class="btn btn-light" (click)="modalRef.hide();clearForm()" style="margin: 10px">
+              Отмена
+            </button>
+
+          </div>
+        </div>
+      </ng-template>
+
+      <ng-template #template>
+        <div class="modal-header">
+          <h4 class="modal-title pull-left" *ngIf="actions=='ADD'">Добавление новой записи в справочник</h4>
+          <h4 class="modal-title pull-left" *ngIf="actions=='EDIT'">Редактирование записи справочника</h4>
+          <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide();clearForm();">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="col-sm" *ngIf="!resident">
+            <label class="col-sm col-form-label">Код<span class="text-danger">&nbsp;*</span></label>
+            <input type="text" class="col-sm form-control" name="Username"
+                   [(ngModel)]="formData.code">
+          </div>
+          <div class="col-sm" *ngIf="!resident">
+            <label class="col-sm col-form-label">nameEn<span class="text-danger">&nbsp;*</span></label>
+            <input type="text" class="col-sm form-control" name="nameEn" [(ngModel)]="formData.nameEn">
+          </div>
+          <div class="col-sm" *ngIf="!resident">
+            <label class="col-sm col-form-label">nameRu<span
+              class="text-danger">&nbsp;*</span></label>
+            <input type="text" class="col-sm form-control" name="nameRu" [(ngModel)]="formData.nameRu">
+          </div>
+          <div class="col-sm" *ngIf="!resident">
+            <label class="col-sm col-form-label">nameKz<span class="text-danger">&nbsp;*</span></label>
+            <input type="text" class="col-sm form-control" name="nameKz" [(ngModel)]="formData.nameKz">
+          </div>
+
+      <!--ЖК начало-->
+          <div class="col-sm" *ngIf="resident">
+            <label class="col-sm col-form-label">Страна<span class="text-danger">&nbsp;*</span></label>
+            <ng-select
+              bindValue="value"
+              bindLabel="label"
+              [items]="countries"
+              [(ngModel)]="formRes.countryId">
+            </ng-select>
+          </div>
+          <div class="col-sm" *ngIf="resident">
+            <label class="col-sm col-form-label">Город<span class="text-danger">&nbsp;*</span></label>
+            <ng-select
+              bindValue="value"
+              bindLabel="label"
+              [items]="cities"
+              [(ngModel)]="formRes.cityId">
+            </ng-select>
+          </div>
+          <div class="col-sm" *ngIf="resident">
+            <label class="col-sm col-form-label">Район</label>
+            <ng-select
+              bindValue="value"
+              bindLabel="label"
+              [items]="districts"
+              [(ngModel)]="formRes.districtId">
+            </ng-select>
+          </div>
+          <div class="col-sm" *ngIf="resident">
+            <label class="col-sm col-form-label">Улица<span class="text-danger">&nbsp;*</span></label>
+            <ng-select
+              bindValue="value"
+              bindLabel="label"
+              [items]="streets"
+              [(ngModel)]="formRes.streetId">
+            </ng-select>
+          </div>
+          <div class="col-sm" *ngIf="resident">
+            <label class="col-sm col-form-label">Номер здания (дома)<span class="text-danger">&nbsp;*</span></label>
+            <input type="number" min="0" maxlength="3" class="col-sm form-control" name="houseNumber" [(ngModel)]="formRes.houseNumber">
+          </div>
+          <div class="col-sm" *ngIf="resident">
+            <label class="col-sm col-form-label">Номер дома (дробь/буква/строение)</label>
+            <input type="text"  maxlength="3"  class="col-sm form-control" name="houseNumberFraction" [(ngModel)]="formRes.houseNumberFraction">
+          </div>
+          <div class="col-sm" *ngIf="resident">
+            <label class="col-sm col-form-label">Название дома (ЖК)</label>
+            <input type="text" maxlength="50"   class="col-sm form-control" name="houseName" [(ngModel)]="formRes.houseName">
+          </div>
+          <div class="col-sm" *ngIf="resident">
+            <label class="col-sm col-form-label">Год постройки</label>
+            <input type="number" min="0" maxlength="4"   class="col-sm form-control" name="yearOfConstruction" [(ngModel)]="formRes.yearOfConstruction">
+          </div>
+          <div class="col-sm" *ngIf="resident">
+            <label class="col-sm col-form-label">Застройщик</label>
+            <ng-select
+              bindValue="value"
+              bindLabel="label"
+              [items]="propertyDevelopers"
+              [(ngModel)]="formRes.propertyDeveloperId">
+            </ng-select>
+          </div>
+          <div class="col-sm" *ngIf="resident">
+            <label class="col-sm col-form-label">Этажность дома</label>
+            <input type="number" min="0" maxlength="3"   class="col-sm form-control" name="numberOfFloors" [(ngModel)]="formRes.numberOfFloors">
+          </div>
+          <div class="col-sm" *ngIf="resident">
+            <label class="col-sm col-form-label">Количество подъездов</label>
+            <input type="number" min="0" maxlength="3"   class="col-sm form-control" name="numberOfEntrances" [(ngModel)]="formRes.numberOfEntrances">
+          </div>
+          <div class="col-sm" *ngIf="resident">
+            <label class="col-sm col-form-label">Количество квартир</label>
+            <input type="number" min="0" maxlength="5"   class="col-sm form-control" name="numberOfApartments" [(ngModel)]="formRes.numberOfApartments">
+          </div>
+          <div class="col-sm" *ngIf="resident">
+            <label class="col-sm col-form-label">Квартир на площадке</label>
+            <input type="number" min="0" maxlength="5"   class="col-sm form-control" name="apartmentsOnTheSite" [(ngModel)]="formRes.apartmentsOnTheSite">
+          </div>
+          <div class="col-sm" *ngIf="resident">
+            <label class="col-sm col-form-label">Высота потолков</label>
+            <input type="number" min="0" maxlength="3"   class="col-sm form-control" name="ceilingHeight" [(ngModel)]="formRes.ceilingHeight">
+          </div>
+          <div class="col-sm" *ngIf="resident">
+            <label class="col-sm col-form-label">Материал постройки</label>
+            <ng-select
+              bindValue="value"
+              bindLabel="label"
+              [items]="materialsOfConstruction"
+              [(ngModel)]="formRes.materialOfConstructionId">
+            </ng-select>
+          </div>
+          <div class="col-sm" *ngIf="resident">
+            <label class="col-sm col-form-label">Класс жилья</label>
+            <input type="text" maxlength="50"   class="col-sm form-control" name="housingClass" [(ngModel)]="formRes.housingClass">
+          </div>
+          <div class="col-sm" *ngIf="resident">
+            <label class="col-sm col-form-label">Состояние</label>
+            <input type="text" maxlength="50"   class="col-sm form-control" name="housingCondition" [(ngModel)]="formRes.housingCondition">
+          </div>
+          <div class="col-sm" *ngIf="resident">
+            <label class="col-sm col-form-label">Тип лифта</label>
+            <ng-select
+              multiple="true"
+              bindValue="value"
+              bindLabel="label"
+              [items]="typeOfElevator"
+              [(ngModel)]="formRes.typeOfElevatorIdList">
+            </ng-select>
+          </div>
+          <div class="col-sm" *ngIf="resident">
+            <label class="col-sm col-form-label">Консьерж</label>
+            <input type="checkbox" class="col-sm form-control" name="concierge" [(ngModel)]="formRes.concierge">
+          </div>
+          <div class="col-sm" *ngIf="resident">
+            <label class="col-sm col-form-label">Колясочная</label>
+            <input type="checkbox" class="col-sm form-control" name="wheelchair" [(ngModel)]="formRes.wheelchair">
+          </div>
+          <div class="col-sm" *ngIf="resident">
+            <label class="col-sm col-form-label">Парковка</label>
+            <ng-select
+              multiple="true"
+              bindValue="value"
+              bindLabel="label"
+              [items]="parkingTypes"
+              [(ngModel)]="formRes.parkingTypeIds">
+            </ng-select>
+          </div>
+          <div class="col-sm" *ngIf="resident">
+            <label class="col-sm col-form-label">Двор</label>
+            <ng-select
+              bindValue="value"
+              bindLabel="label"
+              [items]="yardTypes"
+              [(ngModel)]="formRes.yardTypeId">
+            </ng-select>
+          </div>
+
+          <!--ЖК конец-->
+          <div class="col-sm" style="text-align: right">
+            <button type="button" class="btn btn-primary" (click)="submit()" style="margin: 10px">
+              Сохранить
+            </button>
+            <button type="button" class="btn btn-light" (click)="modalRef.hide();clearForm()" style="margin: 10px">
+              Отмена
+            </button>
+
+          </div>
+
+        </div>
+      </ng-template>
+
 
       <!--</div>-->
     </div>
