--- a/frontend/src/app/claims/create-claim/create-claim.component.html
+++ b/frontend/src/app/claims/create-claim/create-claim.component.html
@@ -50,6 +50,7 @@
                         <div class="row">
                           <div class="col-sm">
                             <ng-select
+                              [readonly]="this.applicationId"
                               [items]="operationType"
                               [(ngModel)]="applicationForm.operationTypeId"
                               formControlName="operationTypeId"
