--- a/frontend/src/app/claims/create-claim/create-claim.component.html
+++ b/frontend/src/app/claims/create-claim/create-claim.component.html
@@ -310,7 +310,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="row" *ngIf="applicationForm.operationTypeId">
+                    <div class="row" *ngIf="applicationForm.operationTypeId?.code ==  '001002'">
                       <fieldset class="scheduler-border col-sm">
                         <legend class="scheduler-border" translate>claim.photo</legend>
                         <div class="row">
