--- a/frontend/src/app/claims/create-claim/create-claim.component.html
+++ b/frontend/src/app/claims/create-claim/create-claim.component.html
@@ -494,6 +494,15 @@
                                      [(ngModel)]="applicationForm.numberOfRoomsTo" formControlName="numberOfRoomsTo"/>
                             </div>
                           </div>
+                          <div class="col-sm" *ngIf="applicationForm.operationTypeId?.code == '001002' && applicationForm.objectTypeId?.code == '003001'">
+                            <label translate>Номер квартиры</label>
+                            <div class="input-group">
+                              <input type="number" min="0" class="form-control"
+                                     placeholder="Номер квартиры"
+                                     [(ngModel)]="applicationForm.apartmentNumber"
+                                     formControlName="apartmentNumber"/>
+                            </div>
+                          </div>
                           <div class="col-sm form-group required"
                                *ngIf="applicationForm.operationTypeId?.code != '001001'">
                             <label for="patronymic" translate>claim.roomCount</label>
@@ -618,7 +627,7 @@
                               </div>
                               <div class="col-sm" *ngIf="applicationForm.operationTypeId?.code != '001001'">
                                 <label for="kitchenArea" translate>claim.kitchen <span class="text-danger"
-                                                                                       *ngIf="!applicationForm.kitchenArea">&nbsp;*</span></label>
+                                                                                       *ngIf="!applicationForm.kitchenArea">*</span></label>
                                 <input type="number" id="kitchenArea" class="form-control"
                                        [(ngModel)]="applicationForm.kitchenArea"
                                        formControlName="kitchenArea" min="0"/>
@@ -663,8 +672,8 @@
                               </div>
                               <div class="col-sm"
                                    *ngIf="applicationForm.operationTypeId?.code != '001001' && applicationForm.objectTypeId?.code=='003001'">
-                                <label for="ceilingHeight" translate>claim.heightWall <span class="text-danger"
-                                                                                            *ngIf="!applicationForm.ceilingHeight">&nbsp;*</span></label>
+                                <label for="ceilingHeight" translate>claim.heightWall<span class="text-danger"
+                                                                                            *ngIf="!applicationForm.ceilingHeight">*</span></label>
                                 <input type="number" id="ceilingHeight" class="form-control"
                                        [(ngModel)]="applicationForm.ceilingHeight"
                                        formControlName="ceilingHeight" min="0"/>
