--- a/frontend/src/app/dic-control/dic-control.component.html
+++ b/frontend/src/app/dic-control/dic-control.component.html
@@ -9,7 +9,7 @@
           </div>
           <div style="border: solid 1px black; padding: 5px">
             <a (click)="loadDictionaryForEdit('residential-complexes'); resident=true"><h5>ЖК</h5></a>
-            <a (click)="loadDictionaryForEdit('COUNTRIES'); resident=false"><h5>Страна </h5></a>
+            <a (click)="loadDictionaryForEdit('COUNTRIES'); resident=false"><h5>Страна</h5></a>
             <a (click)="loadDictionaryForEdit('CITIES'); resident=false"><h5>Город</h5></a>
             <a (click)="loadDictionaryForEdit('DISTRICTS'); resident=false"><h5>Районы</h5></a>
             <a (click)="loadDictionaryForEdit('STREETS'); resident=false"><h5>Улицы</h5></a>
@@ -310,7 +310,7 @@
             <input type="text"  maxlength="3"  class="col-sm form-control" name="houseNumberFraction" [(ngModel)]="formRes.houseNumberFraction">
           </div>
           <div class="col-sm" *ngIf="resident">
-            <label class="col-sm col-form-label">Название дома (ЖК)</label>
+            <label class="col-sm col-form-label">Название дома (ЖК) <span class="text-danger">&nbsp;*</span></label>
             <input type="text" maxlength="50"   class="col-sm form-control" name="houseName" [(ngModel)]="formRes.houseName">
           </div>
           <div class="col-sm" *ngIf="resident">
