--- a/frontend/src/app/objects/objects.component.html
+++ b/frontend/src/app/objects/objects.component.html
@@ -5,7 +5,7 @@
       <ul class="nav nav-pills mb-3 justify-content-center" id="pills-tab" role="tablist">
         <li class="nav-item">
           <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab"
-             aria-controls="pills-home" aria-selected="true">Комнаты</a>
+             aria-controls="pills-home" aria-selected="true">Квартиры</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab"
@@ -637,7 +637,7 @@
             <tbody style="cursor: pointer">
             <tr *ngFor="let object of objectsData;let i = index">
               <td>{{object.realPropertyId}}</td>
-              <td><img [src]="getImgUrl(object.photos.PHOTO[0])" alt="First Slide" class="photoList" width="100"
+              <td><img [src]="getImgUrl(object)" alt="First Slide" class="photoList" width="100"
                        height="100"></td>
               <td>{{object.address.nameRu}}</td>
               <td>{{object.price}}</td>
