--- a/frontend/src/app/objects/objects.component.html
+++ b/frontend/src/app/objects/objects.component.html
@@ -637,8 +637,7 @@
             <tbody style="cursor: pointer">
             <tr *ngFor="let object of objectsData;let i = index">
               <td>{{object.realPropertyId}}</td>
-              <td><img [src]="getImgUrl(object)" alt="First Slide" class="photoList" width="100"
-                       height="100"></td>
+              <td><img [src]="getImgUrl(object)" alt="First Slide" class="photoList" height="100px"></td>
               <td>{{object.address.nameRu}}</td>
               <td>{{object.price}}</td>
               <td>{{object.numberOfRooms}}</td>
