--- a/frontend/src/app/dic-control/dic-control.component.html
+++ b/frontend/src/app/dic-control/dic-control.component.html
@@ -5,7 +5,7 @@
       <div class="row">
         <div class="col-sm-2">
           <div style="border: solid 1px black; padding: 5px">
-            <h3>Все справочники </h3>
+            <h3>Все справочники</h3>
           </div>
           <div style="border: solid 1px black; padding: 5px">
             <a (click)="loadDictionaryForEdit('residential-complexes'); resident=true"><h5>ЖК</h5></a>
@@ -30,19 +30,20 @@
 
 
         <div class="col-sm-10">
-          <div style="border: solid 1px black; padding: 5px">
-            <a (click)="openModal(template);editDic()"><i style="color: blue" class="fa fa-edit fa-2x"></i></a>
-            <a style="margin-left: 10px" (click)="openModal(template);addDic()"><i style="color:green"
-                                                                                   class="fa fa-plus-circle fa-2x"></i></a>
-            <a (click)="openModal(template2);deleteDic()" style="margin-left: 10px"><i style="color:red" class="fa fa-times-circle fa-2x"></i></a>
+          <div style="border: solid 1px black; padding: 5px; ">
+            <a *ngIf="adminRoles" (click)="openModal(template);editDic()"><i style="color: blue" class="fa fa-edit fa-2x"></i></a>
+            <a *ngIf="adminRoles" style="margin-left: 10px" (click)="openModal(template);addDic()"><i style="color:green"
+                                                                                                      class="fa fa-plus-circle fa-2x"></i></a>
+            <a *ngIf="adminRoles" (click)="openModal(template2);deleteDic()" style="margin-left: 10px"><i style="color:red"
+                                                                                                          class="fa fa-times-circle fa-2x"></i></a>
           </div>
 
           <div style="border: solid 1px black; padding: 5px;
-    overflow: scroll;">
+     overflow: auto;">
             <table *ngIf="resident" class="table table-bordered text-center">
               <thead class="text-center">
               <tr>
-                <th>Страна</th>
+                <!--<th>Страна</th>-->
                 <th>Город</th>
                 <th>Район</th>
                 <th>Улица</th>
@@ -70,7 +71,7 @@
               <tbody style="cursor: pointer">
               <tr *ngFor="let dic of residentialComplexes;let i = index" (click)="clickTr(dic)"
                   [ngClass]="{'rowBlue': (dic==clickColumnDic)}">
-                <td>{{dic.code}}</td>
+                <!--<td>{{dic.code}}</td>-->
                 <td>
                   <ng-select
                     [disabled]="true"
@@ -173,7 +174,6 @@
                 <td>
                   <ng-select
                     [disabled]="true"
-
                     [multiple]="true"
                     bindValue="value"
                     bindLabel="label"
@@ -255,7 +255,7 @@
         <div class="modal-header">
           <h4 class="modal-title pull-left" *ngIf="actions=='ADD'">Добавление новой записи в справочник</h4>
           <h4 class="modal-title pull-left" *ngIf="actions=='EDIT'">Редактирование записи справочника</h4>
-          <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef.hide();clearForm();">
+          <button type="button" class="close pull-right" aria-label="Close" (click)="openModal2(template3)">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
@@ -264,6 +264,9 @@
             <label class="col-sm col-form-label">Код<span class="text-danger">&nbsp;*</span></label>
             <input type="text" class="col-sm form-control" name="Username"
                    [(ngModel)]="formData.code">
+            <div *ngIf="!formData.code" class="text-danger">
+              <div *ngIf="!formData.code" translate>claim.requiredField</div>
+            </div>
           </div>
           <div class="col-sm" *ngIf="!resident">
             <label class="col-sm col-form-label">nameEn<span class="text-danger">&nbsp;*</span></label>
@@ -273,6 +276,9 @@
             <label class="col-sm col-form-label">nameRu<span
               class="text-danger">&nbsp;*</span></label>
             <input type="text" class="col-sm form-control" name="nameRu" [(ngModel)]="formData.nameRu">
+            <div *ngIf="!formData.nameRu" class="text-danger">
+              <div *ngIf="!formData.nameRu" translate>claim.requiredField</div>
+            </div>
           </div>
           <div class="col-sm" *ngIf="!resident">
             <label class="col-sm col-form-label">nameKz<span class="text-danger">&nbsp;*</span></label>
@@ -280,23 +286,27 @@
           </div>
 
           <!--ЖК начало-->
-          <div class="col-sm" *ngIf="resident">
-            <label class="col-sm col-form-label">Страна<span class="text-danger">&nbsp;*</span></label>
-            <ng-select
-              bindValue="value"
-              bindLabel="label"
-              [items]="countries"
-              [(ngModel)]="formRes.countryId">
-            </ng-select>
-          </div>
+          <!--<div class="col-sm" *ngIf="resident">-->
+          <!--<label class="col-sm col-form-label">Страна<span class="text-danger">&nbsp;*</span></label>-->
+          <!--<ng-select-->
+          <!--bindValue="value"-->
+          <!--bindLabel="label"-->
+          <!--[items]="countries"-->
+          <!--[(ngModel)]="formRes.countryId">-->
+          <!--</ng-select>-->
+          <!--</div>-->
           <div class="col-sm" *ngIf="resident">
             <label class="col-sm col-form-label">Город<span class="text-danger">&nbsp;*</span></label>
             <ng-select
+              required="true"
               bindValue="value"
               bindLabel="label"
               [items]="cities"
               [(ngModel)]="formRes.cityId">
             </ng-select>
+            <div *ngIf="!formRes.cityId" class="text-danger">
+              <div *ngIf="!formRes.cityId" translate>claim.requiredField</div>
+            </div>
           </div>
           <div class="col-sm" *ngIf="resident">
             <label class="col-sm col-form-label">Район</label>
@@ -310,27 +320,40 @@
           <div class="col-sm" *ngIf="resident">
             <label class="col-sm col-form-label">Улица<span class="text-danger">&nbsp;*</span></label>
             <ng-select
+              required="true"
               bindValue="value"
               bindLabel="label"
               [items]="streets"
               [(ngModel)]="formRes.streetId">
             </ng-select>
+            <div *ngIf="!formRes.streetId" class="text-danger">
+              <div *ngIf="!formRes.streetId" translate>claim.requiredField</div>
+            </div>
           </div>
           <div class="col-sm" *ngIf="resident">
             <label class="col-sm col-form-label">Номер здания (дома)<span class="text-danger">&nbsp;*</span></label>
-            <input type="number" min="0" maxlength="3" class="col-sm form-control" name="houseNumber" [(ngModel)]="formRes.houseNumber">
+            <input type="text"  maxlength="3"  min="1" oninput="this.value=this.value.replace(/[^0-9]/g,'');"
+                   value=${var} class="col-sm form-control" name="houseNumber"   required="true"
+                   [(ngModel)]="formRes.houseNumber">
+            <div *ngIf="!formRes.houseNumber" class="text-danger">
+              <div *ngIf="!formRes.houseNumber" translate>claim.requiredField</div>
+            </div>
           </div>
           <div class="col-sm" *ngIf="resident">
             <label class="col-sm col-form-label">Номер дома (дробь/буква/строение)</label>
-            <input type="text"  maxlength="3"  class="col-sm form-control" name="houseNumberFraction" [(ngModel)]="formRes.houseNumberFraction">
+            <input type="text" maxlength="3" class="col-sm form-control" name="houseNumberFraction"
+                   [(ngModel)]="formRes.houseNumberFraction">
           </div>
           <div class="col-sm" *ngIf="resident">
             <label class="col-sm col-form-label">Название дома (ЖК) <span class="text-danger">&nbsp;*</span></label>
-            <input type="text" maxlength="50"   class="col-sm form-control" name="houseName" [(ngModel)]="formRes.houseName">
+            <input type="text" maxlength="50" class="col-sm form-control" name="houseName"
+                   [(ngModel)]="formRes.houseName">
           </div>
           <div class="col-sm" *ngIf="resident">
             <label class="col-sm col-form-label">Год постройки</label>
-            <input type="number" min="0" maxlength="4"   class="col-sm form-control" name="yearOfConstruction" [(ngModel)]="formRes.yearOfConstruction">
+            <input type="text"  maxlength="4" oninput="this.value=this.value.replace(/[^0-9]/g,'');"
+                   value=${var}  class="col-sm form-control" name="yearOfConstruction"
+                   [(ngModel)]="formRes.yearOfConstruction">
           </div>
           <div class="col-sm" *ngIf="resident">
             <label class="col-sm col-form-label">Застройщик</label>
@@ -343,23 +366,33 @@
           </div>
           <div class="col-sm" *ngIf="resident">
             <label class="col-sm col-form-label">Этажность дома</label>
-            <input type="number" min="0" maxlength="3"   class="col-sm form-control" name="numberOfFloors" [(ngModel)]="formRes.numberOfFloors">
+            <input type="text"  maxlength="3" oninput="this.value=this.value.replace(/[^0-9]/g,'');"
+                   value=${var}  class="col-sm form-control" name="numberOfFloors"
+                   [(ngModel)]="formRes.numberOfFloors">
           </div>
           <div class="col-sm" *ngIf="resident">
             <label class="col-sm col-form-label">Количество подъездов</label>
-            <input type="number" min="0" maxlength="3"   class="col-sm form-control" name="numberOfEntrances" [(ngModel)]="formRes.numberOfEntrances">
+            <input type="text"  maxlength="3" oninput="this.value=this.value.replace(/[^0-9]/g,'');"
+                   value=${var}  class="col-sm form-control" name="numberOfEntrances"
+                   [(ngModel)]="formRes.numberOfEntrances">
           </div>
           <div class="col-sm" *ngIf="resident">
             <label class="col-sm col-form-label">Количество квартир</label>
-            <input type="number" min="0" maxlength="5"   class="col-sm form-control" name="numberOfApartments" [(ngModel)]="formRes.numberOfApartments">
+            <input type="text"  maxlength="5" oninput="this.value=this.value.replace(/[^0-9]/g,'');"
+                   value=${var}  class="col-sm form-control" name="numberOfApartments"
+                   [(ngModel)]="formRes.numberOfApartments">
           </div>
           <div class="col-sm" *ngIf="resident">
             <label class="col-sm col-form-label">Квартир на площадке</label>
-            <input type="number" min="0" maxlength="5"   class="col-sm form-control" name="apartmentsOnTheSite" [(ngModel)]="formRes.apartmentsOnTheSite">
+            <input type="text"  maxlength="5" oninput="this.value=this.value.replace(/[^0-9]/g,'');"
+                   value=${var}  class="col-sm form-control" name="apartmentsOnTheSite"
+                   [(ngModel)]="formRes.apartmentsOnTheSite">
           </div>
           <div class="col-sm" *ngIf="resident">
             <label class="col-sm col-form-label">Высота потолков</label>
-            <input type="number" min="0" maxlength="3"   class="col-sm form-control" name="ceilingHeight" [(ngModel)]="formRes.ceilingHeight">
+            <input type="text"  maxlength="3" oninput="this.value=this.value.replace(/[^0-9]/g,'');"
+                   value=${var}  class="col-sm form-control" name="ceilingHeight"
+                   [(ngModel)]="formRes.ceilingHeight">
           </div>
           <div class="col-sm" *ngIf="resident">
             <label class="col-sm col-form-label">Материал постройки</label>
@@ -372,11 +405,13 @@
           </div>
           <div class="col-sm" *ngIf="resident">
             <label class="col-sm col-form-label">Класс жилья</label>
-            <input type="text" maxlength="50"   class="col-sm form-control" name="housingClass" [(ngModel)]="formRes.housingClass">
+            <input type="text" maxlength="50" class="col-sm form-control" name="housingClass"
+                   [(ngModel)]="formRes.housingClass">
           </div>
           <div class="col-sm" *ngIf="resident">
             <label class="col-sm col-form-label">Состояние</label>
-            <input type="text" maxlength="50"   class="col-sm form-control" name="housingCondition" [(ngModel)]="formRes.housingCondition">
+            <input type="text" maxlength="50" class="col-sm form-control" name="housingCondition"
+                   [(ngModel)]="formRes.housingCondition">
           </div>
           <div class="col-sm" *ngIf="resident">
             <label class="col-sm col-form-label">Тип лифта</label>
@@ -397,7 +432,7 @@
             <input type="checkbox" class="col-sm form-control" name="wheelchair" [(ngModel)]="formRes.wheelchair">
           </div>
           <div class="col-sm" *ngIf="resident">
-            <label class="col-sm col-form-label">Парковка</label>
+            <label class="col-sm col-form-label">Парковка {{formRes.parkingTypeIds}}</label>
             <ng-select
               multiple="true"
               bindValue="value"
@@ -421,11 +456,33 @@
             <button type="button" class="btn btn-primary" (click)="submit()" style="margin: 10px">
               Сохранить
             </button>
-            <button type="button" class="btn btn-light" (click)="modalRef.hide();clearForm()" style="margin: 10px">
+            <button type="button" class="btn btn-light" (click)="openModal2(template3)" style="margin: 10px">
               Отмена
             </button>
 
           </div>
+
+        </div>
+      </ng-template>
+
+      <ng-template #template3>
+        <div class="modal-header">
+          <h4 class="modal-title pull-left">Внимание</h4>
+          <button type="button" class="close pull-right" aria-label="Close" (click)="modalRef2.hide()">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          всплывающее окно с предупреждением об утере внесенных данных и запросить подтверждение данного действия
+        </div>
+        <div class="col-sm" style="text-align: right">
+          <button type="button" class="btn btn-primary" (click)="closeModal()" style="margin: 10px">
+            Подтвердить
+          </button>
+          <button type="button" class="btn btn-light" (click)="modalRef2.hide()" style="margin: 10px">
+            Отмена
+          </button>
+
 
         </div>
       </ng-template>
