--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -96,7 +96,9 @@
       </div>
       <br/>
       <div class="row">
-        <div class="col-sm"></div>
+        <div class="col-sm">
+          <app-calendar></app-calendar>
+        </div>
         <div class="col-sm">
           <table class="table table-bordered table-sm">
             <thead class="text-center">
