--- a/frontend/src/app/home/charts/charts.component.html
+++ b/frontend/src/app/home/charts/charts.component.html
@@ -1,15 +1,11 @@
-<!--<div>-->
-<!--  <div>-->
-<!--    <div style="display: block">-->
-<!--      <canvas baseChart-->
-<!--              [datasets]="barChartData"-->
-<!--              [labels]="barChartLabels"-->
-<!--              [options]="barChartOptions"-->
-<!--              [plugins]="barChartPlugins"-->
-<!--              [legend]="barChartLegend"-->
-<!--              [chartType]="barChartType">-->
-<!--      </canvas>-->
-<!--    </div>-->
-<!--    <button mat-button mat-raised-button color="primary" (click)="randomize()">Update</button>-->
-<!--  </div>-->
-<!--</div>-->
+<div class="col-sm">
+      <canvas baseChart
+              [datasets]="barChartData"
+              [labels]="barChartLabels"
+              [options]="barChartOptions"
+              [plugins]="barChartPlugins"
+              [legend]="barChartLegend"
+              [chartType]="barChartType">
+      </canvas>
+    <button mat-button mat-raised-button color="primary" (click)="randomize()">Update</button>
+</div>
