HTC-114 просмотр карточки клиента - https://confluence.dilau.kz/pages/viewpage.action?pageId=20710100  front

--- a/frontend/src/app/profile/my-claims/my-claims.component.html
+++ b/frontend/src/app/profile/my-claims/my-claims.component.html
@@ -39,11 +39,8 @@
       </tr>
       </tbody>
     </table>
-    <div class="position-static createClaimBtn">
-      <button type="button" class="btn btn-success btn-circle btn-xl" (click)="dnHref('create-claim')"><i
-        class="fa fa-plus"></i>
-      </button>
-    </div>
+    <app-create-claim-btn></app-create-claim-btn>
+
 
     <pagination [(ngModel)]="currentPage"
                 [totalItems]="totalItems"
