--- a/frontend/src/app/profile/my-clients/my-clients.component.html
+++ b/frontend/src/app/profile/my-clients/my-clients.component.html
@@ -19,7 +19,7 @@
       </thead>
       <tbody style="cursor: pointer">
       <tr *ngFor="let client of clientsData;let i = index">
-        <td>{{client.clientId}}</td>
+        <td><a [routerLink]="['/client-card/', client?.clientId]">{{client.clientId}}</a></td>
         <td>{{client.fullname}}</td>
         <td>{{client.phoneNumber}}</td>
         <td>{{client.target[getDicNameByLanguage()]}}</td>
