--- a/frontend/src/app/dic-control/dic-control.component.html
+++ b/frontend/src/app/dic-control/dic-control.component.html
@@ -472,7 +472,7 @@
           </button>
         </div>
         <div class="modal-body">
-          всплывающее окно с предупреждением об утере внесенных данных и запросить подтверждение данного действия
+          Внесенные данные не сохранены, данные будут потеряны. Покинуть страницу?
         </div>
         <div class="col-sm" style="text-align: right">
           <button type="button" class="btn btn-primary" (click)="closeModal()" style="margin: 10px">
