HTC-114 добавил API /clients/{id} getById

--- a/frontend/src/app/profile/my-clients/client-card/client-card.component.html
+++ b/frontend/src/app/profile/my-clients/client-card/client-card.component.html
@@ -12,39 +12,48 @@
       <br/>
       <div>
         <div>
-          <h3>ID - 0138465</h3>
+          <h3>ID - {{client?.id}}</h3>
         </div>
+         <div class="row" style="border: solid 1px black; padding: 5px; ">
+           <div class="col-sm-5" >
+             <div class="row">
+               <h2 class="font-weight-bolder text-uppercase">&nbsp;&nbsp; &nbsp;{{client?.firstName}} {{client?.surname}} {{client?.patronymic}}</h2>
+               <h2 >&nbsp;&nbsp; &nbsp;{{gender}}</h2>
+             </div>
 
-        <div class="col-sm-5">
-          <h2 class="font-weight-bolder text-uppercase">{{currentUser?.surname}} {{currentUser?.name}}</h2>  муж.
 
-          <div class="form-group row">
-            <label for="inputEmail3MD" class="col-sm-2 col-form-label">Телефон</label>
-            <div class="col-sm-10">
-              <div class="input-group">
-                <input type="text" class="form-control" placeholder="Телефон" id="inputEmail3MD"
-                       [(ngModel)]="profile.phone"  prefix="+7 " mask="(000) 000 00 00">
-                <div class="input-group-append">
-                  <span class="input-group-text"><i aria-hidden="true" class="fa fa-whatsapp text-success"></i></span>
-                  <span class="input-group-text"><i aria-hidden="true" class="fa fa-telegram text-primary"></i></span>
-                  <span class="input-group-text"><i aria-hidden="true" class="fa fa-skype text-info"></i></span>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="form-group row">
-            <label for="mail" class="col-sm-2 col-form-label">e-mail:</label>
-            <div class="col-sm-10">
-              <div class="input-group">
-                <input type="text" class="form-control" placeholder="e-mail" id="mail"
-                       [(ngModel)]="profile.email" >
-                <div class="input-group-append">
-                  <span class="input-group-text"><i aria-hidden="true" class="fa fa-google-plus text-info"></i></span>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+
+             <div class="form-group row">
+               <label for="inputEmail3MD" class="col-sm-2 col-form-label">Телефон</label>
+               <div class="col-sm-10">
+                 <div class="input-group">
+                   <input type="text" class="form-control" placeholder="Телефон" id="inputEmail3MD" [disabled]="true"
+                          [(ngModel)]="client.phoneNumber"  prefix="+7" mask="(000) 000 00 00">
+                   <div class="input-group-append">
+                     <span class="input-group-text"><i aria-hidden="true" class="fa fa-whatsapp text-success"></i></span>
+                     <span class="input-group-text"><i aria-hidden="true" class="fa fa-telegram text-primary"></i></span>
+                     <span class="input-group-text"><i aria-hidden="true" class="fa fa-skype text-info"></i></span>
+                   </div>
+                 </div>
+               </div>
+             </div>
+             <div class="form-group row">
+               <label for="mail" class="col-sm-2 col-form-label">e-mail:</label>
+               <div class="col-sm-10">
+                 <div class="input-group">
+                   <input type="text" class="form-control" placeholder="e-mail" id="mail" [disabled]="true"
+                          [(ngModel)]="client.email" >
+                   <div class="input-group-append">
+                     <span class="input-group-text"><i aria-hidden="true" class="fa fa-google-plus text-info"></i></span>
+                   </div>
+                 </div>
+               </div>
+             </div>
+           </div>
+           <div class="col-sm" style="text-align: right">
+             <a ><i style="color: blue" class="fa fa-edit fa-2x"></i></a>
+           </div>
+         </div>
       </div>
       <div class="row">
         <div class="col-sm">
